tests/invalid_ast_samples/c4bcf0c9d029faaa9e471d953ae30cb9e75e4a44956a380058c9a523f1b72e75.py
from ast import *

tree = Module(
    body=[
        Delete(targets=[Call(func=Name(id="name_5", ctx=Load()), args=[], keywords=[])])
    ],
    type_ignores=[],
)

# version: 3.12.0
#
# Source:
# del name_5()
#
#
# Error:
#     SyntaxError('cannot delete function call', ('<file>', 1, 5, 'del name_5()\n', 1, 13))
